<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xeu3dev.stopwatch.StopwatchActivity">

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="92sp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onClickStart"
        android:text="@string/start"/>
    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onClickStop"
        android:text="@string/stop"/>
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onClickReset"
        android:text="@string/reset"/>
    <Button
        android:id="@+id/plus10sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeView"
        android:layout_toRightOf="@+id/startButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickPlus10Sec"
        android:text="@string/plus10"/>
    <Button
        android:id="@+id/plus30sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeView"
        android:layout_toLeftOf="@id/startButton"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickPlus30Sec"
        android:text="@string/plus30"/>
    <Button
        android:id="@+id/plus1min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plus10sec"
        android:layout_toRightOf="@+id/stopButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickPlus1Min"
        android:text="@string/plus1m"/>
    <Button
        android:id="@+id/plus5min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plus30sec"
        android:layout_toLeftOf="@id/stopButton"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickPlus5Min"
        android:text="@string/plus5m"/>
    <Button
        android:id="@+id/plus30min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plus5min"
        android:layout_toLeftOf="@id/resetButton"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickPlus30Min"
        android:text="@string/plus30m"/>
    <Button
        android:id="@+id/plus1hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plus1min"
        android:layout_toRightOf="@+id/resetButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickPlus1hour"
        android:text="@string/plus1h"/>

</RelativeLayout>
